# NeuralNetworkFromScratch

./: .clangd  CMakeLists.txt  README.md
include/: data_manipulator.h  exception.h  image_manipulator.h  label_manipulator.h  utils.h
include/DataStructure/: dataset.h  mat.h
include/Manipulator/: data_manipulator.h  image_manipulator.h  label_manipulator.h
src/: data_manipulator.cpp  exception.cpp  image_manipulator.cpp  label_manipulator.cpp  main.cpp  test.cpp  utils.cpp
src/DataStructure/: dataset.cpp  mat.cpp
src/Manipulator/: data_manipulator.cpp  image_manipulator.cpp  label_manipulator.cpp
